test/fail/match_cover02.v3
//@seman
type T(x: int);

def m(t: T) {
	match (t) {
		x: T => ;
	}
}
